# vc-vp-sample

./: .gitignore  Cargo.toml  README.md  el_holder_public_key_ES256.pem  el_issue.conf  el_issuer_private_key_ES256.pem  el_issuer_public_key_ES256.pem  fujita-patientid-issuer-dev_public_key.pem  generate_el_vc.sh  holder_private_key_ES256.pem  holder_private_key_ES256_pkcs8.pem  holder_private_key_ed25519.pem  holder_public_key_ES256.pem  implement_for_el_protocol.md  issuer_private_key_ES256.pem  issuer_private_key_ES256_pkcs8.pem  issuer_private_key_ed25519.pem  issuer_public_key_ES256.pem  issuer_public_key_ed25519.pem  patientid_holder_private_key_ES256.pem  patientid_holder_public_key_ES256.pem  patientid_vc.jwt  vc.jwt.org
PoP/: Cargo.toml
PoP/src/: main.rs
doc/: VC.md  issue_vc.puml  near_future.md  sample_issue_flow.puml  verify_vp.puml
holder/: Cargo.toml  holder_private_key.pem  holder_public_key.pem  holder_public_key_ed25519.pem
holder/src/: main.rs
issuer/: Cargo.toml  issuer.py  issuer_private_key.pem  issuer_private_key_ed25519_pkcs8.pem  issuer_public_key.pem  issuer_sd_jwt.py
issuer/src/: main.rs
jwk/: Cargo.toml
jwk/src/: main.rs
sd-jwt/: Cargo.toml
sd-jwt/src/: main.rs
verifier/: Cargo.toml
verifier/src/: main.rs
