[package]
name = "holder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
josekit = "0.8.6"
sd-jwt-payload = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
