[package]
name = "issuer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
josekit = "0.8.6"
rand = "0.8.5"
sd-jwt-payload = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
